# SpectraPyle

./: .claudignore  .gitignore  .readthedocs.yaml  CLAUDE.md  README  README.md  test_generic_hdu_flexibility.py
project_root/: .gitignore  README.md  pyproject.toml  setup.py
project_root/configs _tests/YAML/: default1.yaml  default_allinone1.yaml  default_metadata.yaml  default_xavi.yaml  default_xavi_2.yaml  dr1_blue_agn.yaml  xavi_for_loops.yaml
project_root/configs/GUI/: daje.gui  default.gui  default1.gui  default_allinone1.gui  default_metadata1.gui  default_xavi.gui  default_xavi_2.gui  desi_template_1.gui  dr1_blue_agn-gui.gui  dr1_blue_agn.gui  xavi_desi_test.gui  xavi_for_loops.gui
project_root/configs/GUI/.ipynb_checkpoints/: base_individual_fits-checkpoint.gui
project_root/configs/JSON/: base_individual_fits.json  default.json  default_allinone1.json  default_metadata.json  default_xavi.json  default_xavi_2.json  desi_template_1.json  xavi_for_loops.json
project_root/configs/JSON/.ipynb_checkpoints/: default_xavi-checkpoint.json  tets_ora-checkpoint.json
project_root/configs/YAML/: default.yaml  desi_template_1.yaml  prova.yaml
project_root/configs/YAML/.ipynb_checkpoints/: base_individual_fits-checkpoint.yaml
project_root/docs/: Makefile  build_output.txt  citation.rst  conf.py  datalabs.rst  gui-tour.rst  index.rst  normalization.rst  plotting.rst  quickstart.rst  resampling.rst  statistics.rst
project_root/docs/_build/doctrees/: citation.doctree  datalabs.doctree  gui-tour.doctree  index.doctree  instruments.doctree  normalization.doctree  plotting.doctree  quickstart.doctree  statistics.doctree
project_root/docs/_build/html/: .buildinfo  citation.html  datalabs.html  genindex.html  gui-tour.html  index.html  instruments.html  normalization.html  objects.inv  plotting.html  py-modindex.html  quickstart.html  resampling.html  search.html  searchindex.js  statistics.html
project_root/docs/api/: instruments.rst  plot.rst  processes.rst  schema.rst  statistic.rst  utils.rst
project_root/docs/superpowers/specs/: 2026-05-03-readme-and-sphinx-docs-design.md  2026-05-04-documentation-overhaul-design.md  2026-05-06-generic-instrument-design.md
project_root/docs/tools/: capture_gui.py
project_root/future/: environment.yml  pyproject.toml
project_root/future/web/.ipynb_checkpoints/: html_mask-checkpoint.py
project_root/history/: log_history.md
project_root/notebooks/: build_config.ipynb  launch_gui.py  launch_gui_v1.0.py  line_manager.ipynb  make_config.ipynb  modify_host.py  plot_helper.ipynb  run_cli.py  run_gui.py  run_spectraPyle.py  tests.ipynb
project_root/notebooks/.ipynb_checkpoints/: tests-checkpoint.ipynb  tmp_modify_config_from_notebook-checkpoint.ipynb
project_root/src/spectraPyle/: __init__.py  cli.py
project_root/src/spectraPyle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
project_root/src/spectraPyle/instruments/: __init__.py  _combined_fits_cache.py  desi.py  euclid.py  generic.py  instruments_rules.json
project_root/src/spectraPyle/io/: IO.py  __init__.py  (+1 more)
project_root/tables/: absorptions_table.csv  emission_lines_vacuum_table.csv
project_root/tests/ALL_IN_ONE_FITS/: spectra_catalogue.fits
project_root/tests/DATALABS_METAFILES/: metadata_test.csv  stack_test.fits
project_root/tests/INDIVIDUAL_FITS/: -519109067279208788.fits  -524709074274929978.fits  -524779777281424507.fits  -530485560276239627.fits  -532191856276462710.fits  -532424415276866539.fits  -532475334277445017.fits  -535891398274300946.fits  -543873506294609824.fits  2653214339660419371.fits  2657047247658191407.fits  2659952419659576380.fits  2660480760659869347.fits  2661241787657865578.fits  2662690642652389275.fits  2663439580656634843.fits  2663623297651913905.fits  2663849967654329005.fits  2665539690652197554.fits  2665560212658972917.fits  2666151054652436057.fits  2667524036652145371.fits  2668556226662006298.fits  2669378281650939199.fits  2669598521650682568.fits  2670446601657889542.fits  2670683542659359747.fits  2673593698649100027.fits  2673906509651929277.fits  2676412685659397446.fits  2676664056651444027.fits  2678652418671350815.fits  2679477659665977634.fits  2681205630647955365.fits  2681239933654767191.fits  2681514708654564064.fits  2682059917657711557.fits  2682108614649054705.fits  2684071300661132056.fits  2684199400655253043.fits  (+60 more)
(+92 files in other folders)
