[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectrapyle"
dynamic = ["version"]
description = "Spectral stacking toolkit"
readme = "README.md"
license = {text = "TBD"}
authors = [
    {name = "Salvatore Quai", email = "salvatore.quai@unibo.it"}
]
classifiers = [
    "Development Status :: 5 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "astropy>=6.0",
    "pydantic>=2.0",
    "h5py>=3.8",
    "dust_extinction>=1.7",
    "plotly>=6.0",
    "scipy>=1.10",
    "voila>=0.5",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib>=3.7",
    "black>=24.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pre-commit",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "sphinx-astropy",
]

[project.scripts]
stack-spectra = "spectrapyle.cli:stack_spectra_cli"
inspect-config = "spectrapyle.cli:inspect_config_cli"

[project.urls]
Homepage = "https://github.com/squai/spectrapyle"
Documentation = "https://spectrapyle.readthedocs.io"
Repository = "https://github.com/squai/spectrapyle.git"
"Bug Tracker" = "https://github.com/squai/spectrapyle/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/spectrapyle"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

